[gd_scene load_steps=5 format=3 uid="uid://bem5yd0kkgxaf"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_58mq7"]
[ext_resource type="PackedScene" uid="uid://cuhq7pm1lhhks" path="res://OptionMenu.tscn" id="2_pomqv"]
[ext_resource type="Texture2D" uid="uid://bm4qpbyrlhx1e" path="res://utilitySprite/MainMenu.png" id="2_q5scb"]
[ext_resource type="Theme" uid="uid://bcxapju6547ux" path="res://utilitySprite/UI/Nori_theme.tres" id="3_ihlgr"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_58mq7")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 80)
scale = Vector2(0.816547, 0.816547)
texture = ExtResource("2_q5scb")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -182.0
offset_top = -68.0
offset_right = 183.0
offset_bottom = 187.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="play" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme = ExtResource("3_ihlgr")
text = "Play"

[node name="option" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme = ExtResource("3_ihlgr")
text = "Options"

[node name="quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme = ExtResource("3_ihlgr")
text = "Quit"

[node name="Camera2D" type="Camera2D" parent="."]

[node name="ColorRect" parent="." instance=ExtResource("2_pomqv")]
visible = false

[connection signal="pressed" from="VBoxContainer/play" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/option" to="." method="_on_option_pressed"]
[connection signal="closedOptions" from="ColorRect" to="." method="_on_color_rect_closed_options"]
